--- a/templates/result.html
+++ b/templates/result.html
@@ -55,12 +55,12 @@
 
 <body>
   <div class="container">
-    <h1 class="font-italic">{{ note }}</h1>
+    <p class="font-italic">{{ note }}</p>
 
 
     <h1 class="font-semibold">Prediction Result</h1>
-    
-    <p class="text-lg">{{ prediction }}</p>
+
+    <h2 class="text-lg">{{ prediction }}</h2>
     <a href="/" class="text-green-500 hover:text-green-700">Go back to the home page</a>
   </div>
 </body>
